# talker

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THIRD-PARTY.html  about.toml  deny.toml
.cargo-husky/hooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: brand.md  licensing.md  security-audit.md  stability.md
docs/adr/: adr-0001-rust-macos-native-swappable-engines.md  adr-0002-menubar-app-egui-settings.md  adr-0003-embedded-llamacpp-gemma4-e2b.md  adr-0004-doku-format-ears-und-adr-diagramme.md  adr-0005-ci-github-hosted-macos-runner.md  adr-0006-lizenz-mit.md  adr-0007-source-first-distribution-ohne-notarisierung.md
docs/architecture/: overview.md
docs/requirements/: README.md  cleanup-modes.md  context-awareness.md  dictation-core.md  model-downloader.md  onboarding-permissions.md
examples/: cleanup_stress.rs  gen_icon.rs  pipeline_ab.rs  stt_eval.rs
resources/: Info.plist
scripts/: bundle.sh  gen_stt_fixtures.sh  gen_stt_fixtures_dev.sh  make-cert.sh
src/: audio.rs  cleanup.rs  clipboard.rs  config.rs  error.rs  hotkey.rs  indicator.rs  injection.rs  lib.rs  login_item.rs  main.rs  models.rs  overlay.rs  permissions.rs  pipeline.rs  stt.rs  tray.rs  ui.rs  vocab_match.rs
tests/: cleanup_gemma.rs  stt_parakeet.rs
tests/fixtures/stt/: de-business.ref.txt  de-frage.ref.txt  de-zahlen.ref.txt  dev-anweisung-branch.ref.txt  dev-anweisung-css.ref.txt  dev-anweisung-docker.ref.txt  dev-anweisung-refactor.ref.txt  dev-api.ref.txt  dev-css.ref.txt  dev-docker.ref.txt  dev-git.ref.txt  dev-html.ref.txt  dev-java.ref.txt  dev-kubernetes.ref.txt  dev-llm.ref.txt  dev-node.ref.txt  dev-react.ref.txt  terms.txt  (+7 more)
